tests/expected_invalid_foreign_generics.diag.out
<input>:2:22: error: foreign functions may not declare generic parameters
    public foreign fn foo<T>() -> Int
                         ^
